--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Exo+2:wght@600&family=Kdam+Thmor+Pro&family=Montserrat:wght@300&family=Open+Sans:ital,wght@1,300&family=Plus+Jakarta+Sans:wght@200&family=Roboto+Flex:opsz,wght@8..144,200&display=swap"
         rel="stylesheet">
-    <title>MNTN</title>
+        <link rel="icon" href="Assets/Neuralink.png">
+    <title>Neuralink</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
