--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             here', making it look like readable English. </p>
                     </div>
                     <div class="col-sm">
-                        <img src="Assets/ap" class="img-fluid" alt="" id="sub-img">
+                        <img src="Assets/approach-link-1.png" class="img-fluid" alt="" id="sub-img">
                     </div>
                 </div>
             </div>
