shifted col to right footer

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <small class="d-block mb-3 text-white py-3">&copy; 2010-2022</small>
                     </div>
                    
-                    <div class="col-8 col-md">
+                    <div class="col-8 col-md mx-5">
                         <h5>Resources</h5>
                         <ul class="list-unstyled text-small">
                             <li><a class="text-white text-decoration-none" href="#">Resource</a></li>
