shift about down a little bit

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
         <section class="container-fluid bg-light my-4 " id="sub-ctn">
             <div class="container w-75 py-3  bg-light">
-                <i class="bi bi-arrow-right text-small"> <em>Get Started</em></i>
+                <i class="bi bi-arrow-right text-small"> Get Started</i>
                 <div class="row">
                     <div class="col-sm">
-                        <p class="text-dark py-3">
+                        <p class="text-dark">
                         <h2>About Us</h2>
                         Neuralink is a team of exceptionally talented people. We are creating the future of brain
                         interfaces: building devices now that will help people with paralysis and inventing new
@@ -208,7 +208,7 @@
                         <small class="d-block mb-3 text-white py-3">&copy; 2010-2022</small>
                     </div>
                    
-                    <div class="col-8 col-md mx-5">
+                    <div class="col-8 col-md">
                         <h5>Resources</h5>
                         <ul class="list-unstyled text-small">
                             <li><a class="text-white text-decoration-none" href="#">Resource</a></li>
