--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <section class="">
+    <section >
         <!-- heades starts here -->
         <nav class="navbar navbar-expand-lg">
             <img src="Assets/Neuralink.png" alt="" class="img-fluid navbar-brand" id="logo">
@@ -104,7 +104,7 @@
 
 
         <section class="container-fluid bg-light my-4 " id="sub-ctn">
-            <div class="container w-75 py-3  bg-light">
+            <div class="container w-75 py-3  bg-">
                 <i class="bi bi-arrow-right text-small"> Get Started</i>
                 <div class="row">
                     <div class="col-sm">
